tests/compile_fail/invalid_type_struct.rs
use structconf::StructConf;

#[derive(StructConf)]
struct Enum(String, i32);

fn main() {}
